@@ -38,6 +38,7 @@
       "runtime" : {
          "requires" : {
             "Carp" : 0,
+            "Class::Load" : 0,
             "English" : 0,
             "HTTP::Request::Common" : "5.814",
             "JE" : "0.033",
